create-page-custom-horizondal-updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,7 +84,7 @@
 
           </div>    -->
 
-          <div class="dropdown">
+          <div class="dropdown create-page-button-custom-position">
             <!--<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" (click)="iscreateOptEnabled =  !iscreateOptEnabled" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Create page
             </button>
@@ -94,7 +94,7 @@
               <a class="dropdown-item" href="#" (click)="loadcreatepage($event,'party')">Create Party</a>
             </div>-->
 
-            <button (click)="route('create-page-selection')" class="btn btn-secondary horizontal-width-btn" type="button" (click)="iscreateOptEnabled =  !iscreateOptEnabled">
+            <button (click)="route('create-page-selection')" class="btn btn-md btn-secondary btn-custom-horizondal" type="button" (click)="iscreateOptEnabled =  !iscreateOptEnabled">
               Create page
             </button>
 
