--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -233,3 +233,10 @@ div#v-pills-tab a {
         float: left;
     }
 }
+.btn-custom-horizondal{
+    width: 120px;
+    height: 40px;
+}
+.create-page-button-custom-position{
+    text-align: center;
+}
