connection-request-user-interface-update

--- a/src/app/components/connection/connectionrequest/connectionrequest.component.html
+++ b/src/app/components/connection/connectionrequest/connectionrequest.component.html
@@ -13,9 +13,9 @@
   <button *ngIf="request.status == 'REQUESTED'" class="btn btn-outline-warning my-2 my-sm-0" type="submit" (click)="loadUser()">Later</button>
 </div>
 -->
-<div class="container"> 
-  <div class="row userMain">
-      <div class="col-md-3 col-sm-4">
+<div class=""> 
+  <div class="userMain">
+      <div class="">
           <div class="userBlock">
               <div class="backgrounImg">
                   <img src="https://preview.ibb.co/miQjb7/photography4.jpg">
