--- a/src/app/components/connection/connectionlist/connectionlist.component.html
+++ b/src/app/components/connection/connectionlist/connectionlist.component.html
@@ -1,2 +1,45 @@
-<app-connectionrequest [connection]=conn *ngFor="let conn of connectionRequest">
-</app-connectionrequest>
+
+
+ <div class="card mt-3 tab-card">
+    <div class="card-header tab-card-header">
+      <ul class="nav nav-tabs card-header-tabs li-justify-content-center" id="myTab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link" id="one-tab" data-toggle="tab" href="javascript:void(0);" role="tab" aria-controls="One" aria-selected="true">
+                Accepted
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="two-tab" data-toggle="tab" href="javascript:void(0);" role="tab" aria-controls="Two" aria-selected="false">
+                Pending
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="three-tab" data-toggle="tab" href="javascript:void(0);" role="tab" aria-controls="Three" aria-selected="false">
+                All
+            </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active p-3" id="one" role="tabpanel" aria-labelledby="one-tab">
+        <h5 class="card-title">Accepted Request's</h5>
+        
+        <div class="row">
+            <app-connectionrequest [connection]=conn *ngFor="let conn of connectionRequest" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"></app-connectionrequest>
+            </div>
+        
+      </div>
+      <div class="tab-pane fade p-3" id="two" role="tabpanel" aria-labelledby="two-tab">
+        <h5 class="card-title">Pending Request's</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        
+      </div>
+      <div class="tab-pane fade p-3" id="three" role="tabpanel" aria-labelledby="three-tab">
+        <h5 class="card-title">All Request's</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        
+      </div>
+
+    </div>
+  </div>
