refactored Create page and Connections page

--- a/src/app/components/post/postcard/postcard.component.css
+++ b/src/app/components/post/postcard/postcard.component.css
@@ -178,7 +178,7 @@ form button {
   background-color: #FDFEFE;
 }
 .post-header{
-  background-color: #EAEDED;
+  background-color: #b2d2ec;
 }
 .post-comment-section{
   margin: 15px 0px 0px 0px;
