--- a/src/app/components/legislator/legislator.component.css
+++ b/src/app/components/legislator/legislator.component.css
@@ -90,3 +90,405 @@ transition: all 0.35s ease;
 -webkit-transform: scale(1.3);
 transform: scale(1.3);
 }
+
+
+/* FontAwesome for working BootSnippet :> */
+
+#team {
+    background: #eee !important;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+    background-color: #108d6f;
+    border-color: #108d6f;
+    box-shadow: none;
+    outline: none;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #028ece;
+    border-color: #028ece;
+}
+
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: #028ece;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#team .card {
+    border: none;
+    background: #ffffff;
+}
+
+.image-flip:hover .backside,
+.image-flip.hover .backside {
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    border-radius: .25rem;
+}
+
+.image-flip:hover .frontside,
+.image-flip.hover .frontside {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.mainflip {
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -moz-transition: 1s;
+    -moz-transform: perspective(1000px);
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.frontside {
+    position: relative;
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    z-index: 2;
+    margin-bottom: 30px;
+}
+
+.backside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+}
+
+.frontside,
+.backside {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transition: 1s;
+    -moz-transform-style: preserve-3d;
+    -o-transition: 1s;
+    -o-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+}
+
+.frontside .card,
+.backside .card {
+    min-height: 312px;
+}
+
+.backside .card a {
+    font-size: 18px;
+    color: #028ece !important;
+}
+
+.frontside .card .card-title,
+.backside .card .card-title {
+    color: #007b5e !important;
+}
+
+.frontside .card .card-body img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+.img-custom-size-legislator{
+	height: 200px;
+	width: auto;
+}
+
+button{
+	display: inline-block;
+	position: relative;
+	background: none;
+	border: none;
+	color: #fff;
+	font-size: 18px;
+	cursor: pointer;
+	margin: 20px 30px;
+	background: rgba(0,0,0,0.09);
+	/*background: transparent;*/
+  }
+  button:hover{
+	/*background: rgba(0,0,0,0.09);*/
+	background: transparent;
+  }
+  span{
+	display: block;
+	padding: 25px 80px;
+  }
+  button::before, button::after{
+	content:"";
+	width: 0;
+	height: 2px;
+	position: absolute;
+	transition: all 0.2s linear;
+	background: rgb(2, 142, 206);
+  }
+  
+  span::before, span::after{
+	content:"";
+	width:2px;
+	height:0;
+	position: absolute;
+	transition: all 0.2s linear;
+	background: rgb(2, 142, 206);
+  }
+  button:hover::before, button:hover::after{
+	width: 100%;
+  }
+  button:hover span::before, button:hover span::after{
+	height: 100%;
+  }
+  
+  /*----- button 3 -----*/
+  .btn-3::after{
+	left: 0;
+	bottom: 0;
+	transition-delay: 0.6s;
+  }
+  .btn-3 span::after{
+	transition-delay: 0.4s;
+	right: 0;
+	bottom: 0
+  }
+  button > p{
+	color: rgb(2, 142, 206);
+  }
+  button > span{
+	color: black;
+  }
+  .create-page-title {
+	position: relative;
+	top: 20px ;
+  }
+  button > span > .fa{
+	font-size: 60px;
+  }
+  button > em{
+	font-size: 15px;
+  }
+  button{
+	padding-bottom: 20px;
+  }
+  .btn-3::before{
+	right: 0;
+	top: 0;
+	transition-delay: 0.2s;
+  }
+  .btn-3 span::before{
+	transition-delay: 0s;
+	left: 0;
+	top: 0;
+  }
+  
+  .btn-3:hover::after{
+	transition-delay: 0s;
+  }
+  .btn-3:hover span::after{
+	transition-delay: 0.2s;
+  }
+  .btn-3:hover::before{
+	transition-delay: 0.4s;
+  }
+  .btn-3:hover span::before{
+	transition-delay: 0.6s;
+  }
+  /*----- button 1 -----*/
+  .btn-1::before, .btn-1::after{
+	transition-delay: 0.2s;
+  }
+  .btn-1 span::before, .btn-1 span::after{
+	transition-delay: 0s;
+  }
+  .btn-1::before{
+	right: 0;
+	top: 0;
+  }
+  .btn-1::after{
+	left: 0;
+	bottom: 0;
+  }
+  .btn-1 span::before{
+	left: 0;
+	top: 0;
+  }
+  .btn-1 span::after{
+	right: 0;
+	bottom: 0;
+  }
+  .btn-1:hover::before, .btn-1:hover::after{
+	transition-delay: 0s;
+  }
+  .btn-1:hover span::before, .btn-1:hover span::after{
+	transition-delay: 0.2s;
+  }
+  
+  /*--- Button 2 -------*/
+  
+  
+  .btn-2::before, .btn-2::after{
+	transition-delay: 0s;
+  }
+  .btn-2 span::before, .btn-2 span::after{
+	transition-delay: 0.2s;
+  }
+  .btn-2::before{
+	right: 0;
+	top: 0;
+  }
+  .btn-2::after{
+	left: 0;
+	bottom: 0;
+  }
+  .btn-2 span::before{
+	left: 0;
+	top: 0;
+  }
+  .btn-2 span::after{
+	right: 0;
+	bottom: 0;
+  }
+  .btn-2:hover::before, .btn-2:hover::after{
+	transition-delay: 0.2s;
+  }
+  .btn-2:hover span::before, .btn-2:hover span::after{
+	transition-delay: 0s;
+  }
+  
+  
+  /*----- button 3 -----*/
+  .btn-3::after{
+	left: 0;
+	bottom: 0;
+	transition-delay: 0.6s;
+  }
+  .btn-3 span::after{
+	transition-delay: 0.4s;
+	right: 0;
+	bottom: 0
+  }
+  .btn-3::before{
+	right: 0;
+	top: 0;
+	transition-delay: 0.2s;
+  }
+  .btn-3 span::before{
+	transition-delay: 0s;
+	left: 0;
+	top: 0;
+  }
+  
+  .btn-3:hover::after{
+	transition-delay: 0s;
+  }
+  .btn-3:hover span::after{
+	transition-delay: 0.2s;
+  }
+  .btn-3:hover::before{
+	transition-delay: 0.4s;
+  }
+  .btn-3:hover span::before{
+	transition-delay: 0.6s;
+  }
+  
+  /*----- button 4 -----*/
+  .btn-4::after{
+	right:0;
+	bottom: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-4 span::after{
+	right:0;
+	bottom: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-4::before{
+	left: 0;
+	top: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-4 span::before{
+	left: 0;
+	top: 0;
+	transition-duration: 0.4s;
+  }
+  
+  /*----- button 5 -----*/
+  .btn-5::after{
+	left:0;
+	bottom: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-5 span::after{
+	right:0;
+	top: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-5::before{
+	right: 0;
+	top: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-5 span::before{
+	left: 0;
+	bottom: 0;
+	transition-duration: 0.4s;
+  }
+  
+  /*----- button 6 -----*/
+  .btn-6::before{
+	left: 50%;
+	top: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-6::after{
+	left: 50%;
+	bottom: 0;
+	transition-duration: 0.4s;
+  }
+  .btn-6 span::before{
+	left: 0;
+	top: 50%;
+	transition-duration: 0.4s;
+  }
+  .btn-6 span::after{
+	right: 0;
+	top: 50%;
+	transition-duration: 0.4s;
+  }
+  .btn-6:hover::before, .btn-6:hover::after{
+	left: 0;
+  }
+  .btn-6:hover span::before, .btn-6:hover span::after{
+	top: 0;
+  }
+  
