1)Second tag replaces the first one 2)Deleting the tag starting from the beginning character not deleting completely

--- a/src/app/components/post/newpost/newpost.component.css
+++ b/src/app/components/post/newpost/newpost.component.css
@@ -170,7 +170,9 @@ form button {
 }
 
 .tagged-users{
-  background-color: burlywood;
+  background-color: #D6DBDF;
+  border: 1px solid #868393;
+  border-radius: 5px;
 }
 #postContent{
   height: 100px;
