--- a/src/app/components/security/createpage/createpage.component.html
+++ b/src/app/components/security/createpage/createpage.component.html
@@ -198,10 +198,15 @@
                 <textarea type="text" class="form-control" placeholder="Description" formControlName="description"></textarea>
               </div>
             </div>
-            <label>Access Restriction</label>
-            <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
-              <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label>Access Restriction</label>
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
+                  <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
+                </div>
+              </div>
             </div>
 
             <div class="form-group">
@@ -230,9 +235,15 @@
                 <textarea type="text" class="form-control" placeholder="Description" formControlName="description"></textarea>
               </div>
             </div>
-            <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
-              <label class="custom-control-label" for="customSwitch1">Private[OFF] / Public[ON]</label>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label>Access Restriction</label>
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
+                  <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
+                </div>
+              </div>
             </div>
 
             <div class="form-group">
