--- a/src/app/components/security/createpage/createpageselection/createpageselection.component.html
+++ b/src/app/components/security/createpage/createpageselection/createpageselection.component.html
@@ -4,7 +4,7 @@
       <div class="card">
 
         <header class="card-header">
-          <h4 class="card-title mt-2">Make a new page</h4>
+          <h4 class="card-title mt-2">Create a new page</h4>
         </header>
 
         <article class="card-body">
@@ -14,13 +14,13 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
               <button class="btn-1" (click)="loadcreatepage($event,'district')">
                 <span>
-                <i class="fa fa-area-chart" aria-hidden="true"></i>
+                <i class="fa fa-map" aria-hidden="true"></i>
                   <p class="create-page-title">
                       District
                   </p>
               </span>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  District is an area representation such as State Legislative District, Congressional District, School District.
                 <p>
               </button>
             </div>
@@ -28,13 +28,13 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
               <button class="btn-1" (click)="loadcreatepage($event,'legislator')">
                 <span>
-                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                <i class="fa fa-user-circle" aria-hidden="true"></i>
                   <p class="create-page-title">
                       Legislator
                   </p>
               </span>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  People representative and member of a legislative body who makes laws especially for a political unit.
                 <p>
               </button>
             </div>
@@ -42,13 +42,27 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
               <button class="btn-1" (click)="loadcreatepage($event,'party')">
                 <span>
-                <i class="fa fa-users" aria-hidden="true"></i>
+                <i class="fa fa-flag" aria-hidden="true"></i>
                   <p class="create-page-title">
-                      Party
+                      Politcal Party
                   </p>
               </span>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  A political party is an organized group of people who have the same ideology.
+                <p>
+              </button>
+            </div>
+
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+              <button class="btn-1" (click)="loadcreatepage($event,'group')">
+                <span>
+                <i class="fa fa-users" aria-hidden="true"></i>
+                  <p class="create-page-title">
+                      Group
+                  </p>
+              </span>
+                <p>
+                  A Group of anything such as NGO, HOA.
                 <p>
               </button>
             </div>
