--- a/src/app/components/security/createpage/createpageselection/createpageselection.component.css
+++ b/src/app/components/security/createpage/createpageselection/createpageselection.component.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=PT+Sans);
 
 .custom-control{
   padding-bottom: 10px;
@@ -28,7 +27,7 @@ button{
   font-size: 18px;
   cursor: pointer;
   margin: 20px 30px;
-  background: rgba(0,0,0,0.09);
+ /*background: rgba(0,0,0,0.09);*/
   /*background: transparent;*/
 }
 button:hover{
@@ -63,17 +62,6 @@ button:hover span::before, button:hover span::after{
   height: 100%;
 }
 
-/*----- button 3 -----*/
-.btn-3::after{
-  left: 0;
-  bottom: 0;
-  transition-delay: 0.6s;
-}
-.btn-3 span::after{
-  transition-delay: 0.4s;
-  right: 0;
-  bottom: 0
-}
 button > p{
   color: rgb(2, 142, 206);
 }
@@ -93,29 +81,7 @@ button > em{
 button{
   padding-bottom: 20px;
 }
-.btn-3::before{
-  right: 0;
-  top: 0;
-  transition-delay: 0.2s;
-}
-.btn-3 span::before{
-  transition-delay: 0s;
-  left: 0;
-  top: 0;
-}
 
-.btn-3:hover::after{
-  transition-delay: 0s;
-}
-.btn-3:hover span::after{
-  transition-delay: 0.2s;
-}
-.btn-3:hover::before{
-  transition-delay: 0.4s;
-}
-.btn-3:hover span::before{
-  transition-delay: 0.6s;
-}
 /*----- button 1 -----*/
 .btn-1::before, .btn-1::after{
   transition-delay: 0.2s;
@@ -146,142 +112,4 @@ button{
   transition-delay: 0.2s;
 }
 
-/*--- Button 2 -------*/
 
-
-.btn-2::before, .btn-2::after{
-  transition-delay: 0s;
-}
-.btn-2 span::before, .btn-2 span::after{
-  transition-delay: 0.2s;
-}
-.btn-2::before{
-  right: 0;
-  top: 0;
-}
-.btn-2::after{
-  left: 0;
-  bottom: 0;
-}
-.btn-2 span::before{
-  left: 0;
-  top: 0;
-}
-.btn-2 span::after{
-  right: 0;
-  bottom: 0;
-}
-.btn-2:hover::before, .btn-2:hover::after{
-  transition-delay: 0.2s;
-}
-.btn-2:hover span::before, .btn-2:hover span::after{
-  transition-delay: 0s;
-}
-
-
-/*----- button 3 -----*/
-.btn-3::after{
-  left: 0;
-  bottom: 0;
-  transition-delay: 0.6s;
-}
-.btn-3 span::after{
-  transition-delay: 0.4s;
-  right: 0;
-  bottom: 0
-}
-.btn-3::before{
-  right: 0;
-  top: 0;
-  transition-delay: 0.2s;
-}
-.btn-3 span::before{
-  transition-delay: 0s;
-  left: 0;
-  top: 0;
-}
-
-.btn-3:hover::after{
-  transition-delay: 0s;
-}
-.btn-3:hover span::after{
-  transition-delay: 0.2s;
-}
-.btn-3:hover::before{
-  transition-delay: 0.4s;
-}
-.btn-3:hover span::before{
-  transition-delay: 0.6s;
-}
-
-/*----- button 4 -----*/
-.btn-4::after{
-  right:0;
-  bottom: 0;
-  transition-duration: 0.4s;
-}
-.btn-4 span::after{
-  right:0;
-  bottom: 0;
-  transition-duration: 0.4s;
-}
-.btn-4::before{
-  left: 0;
-  top: 0;
-  transition-duration: 0.4s;
-}
-.btn-4 span::before{
-  left: 0;
-  top: 0;
-  transition-duration: 0.4s;
-}
-
-/*----- button 5 -----*/
-.btn-5::after{
-  left:0;
-  bottom: 0;
-  transition-duration: 0.4s;
-}
-.btn-5 span::after{
-  right:0;
-  top: 0;
-  transition-duration: 0.4s;
-}
-.btn-5::before{
-  right: 0;
-  top: 0;
-  transition-duration: 0.4s;
-}
-.btn-5 span::before{
-  left: 0;
-  bottom: 0;
-  transition-duration: 0.4s;
-}
-
-/*----- button 6 -----*/
-.btn-6::before{
-  left: 50%;
-  top: 0;
-  transition-duration: 0.4s;
-}
-.btn-6::after{
-  left: 50%;
-  bottom: 0;
-  transition-duration: 0.4s;
-}
-.btn-6 span::before{
-  left: 0;
-  top: 50%;
-  transition-duration: 0.4s;
-}
-.btn-6 span::after{
-  right: 0;
-  top: 50%;
-  transition-duration: 0.4s;
-}
-.btn-6:hover::before, .btn-6:hover::after{
-  left: 0;
-}
-.btn-6:hover span::before, .btn-6:hover span::after{
-  top: 0;
-}
